@@ -7,7 +7,8 @@ namespace LHAPDF {
   namespace { // unnamed namespace
 
     // Calculate first order derivative, dy/dt, as it appears in the differential equation
-    double _derivative(double t, double y, const std::vector<double>& beta ) {
+    double _derivative(double t, double y, const std::vector<double>& beta) {
+      /// @todo Respect the _order member variable
       const double d0 = beta[0]/(-2*M_PI);
       const double d1 = beta[1]/(-4*M_PI*M_PI);
       const double d2 = beta[2]/(-64*M_PI*M_PI*M_PI);
@@ -24,6 +25,7 @@ namespace LHAPDF {
     /// @todo Make these class members
     // Initial step size
     /// @todo Use an adaptive step size -- stepping in log space? It needs to be *much* faster!
+    /// @todo Stepping also needs to get much smaller as we approach LambdaQCD
     double h = 0.01;
     // Fractional threshold to which we run in Q2 scale
     /// @todo Need a mechanism to shrink the steps if accuracy < stepsize?
@@ -34,21 +36,18 @@ namespace LHAPDF {
     /// @todo Would specifying the accuracy in abs rather than rel terms be better?
     const double accuracy = faccuracy * q2;
 
-    // Number of active flavours used in beta function calculations
-    /// @todo This needs to happen *inside* the running loop
-    const int nf = nf_Q2(q2);
-    const vector<double> bs = betas(nf);
-
-    /// @todo Running (i.e. t and h) is in Q rather than Q2? Check
+    /// @todo Running (i.e. t and h) is in Q2 or Q? Check
 
     /// @todo Use caching of the last target so we don't always have to start the running from MZ?
     ///       Then choose to start from last or MZ, whichever is closer.
 
-    // Run in energy using RK4 algorithm until we are within our defined threshold energy
-    double t = _mz; // starting point
+    // Run in Q2 using RK4 algorithm until we are within our defined accuracy
+    double t = sqr(_mz); // starting point
     double y = _alphas_mz; // starting value
-    /// @todo Units of q2 and t are different. Which quantity are we evolving in?
     while (fabs(q2 - t) > accuracy) {
+      // Number of active flavours used in beta function calculations
+      const vector<double> bs = betas(nf_Q2(t));
+
       /// Mechanism to shrink the steps if accuracy < stepsize and we are close to Q2
       if (fabs(h) > accuracy && fabs(q2 - t)/h < 10) h = accuracy/2.0;
 
@@ -58,15 +57,11 @@ namespace LHAPDF {
 
       // cout << t << " -> " << q2 << ", in steps of size " << h << endl;
 
-      // Increment based on the slope at the beginning of the interval using a simple Euler step
+      // Determine increments in y based on the slopes of the function at the
+      // beginning, midpoint, and end of the interval
       const double k1 = h * _derivative(t, y, bs);
-
-      // Increments based on the slope at the midpoint of the interval
       const double k2 = h * _derivative(t + h/2.0, y + k1/2.0, bs);
-
       const double k3 = h * _derivative(t + h/2.0, y + k2/2.0, bs);
-
-      // Increment based on the slope at the end of the interval
       const double k4 = h * _derivative(t + h, y + k3, bs);
 
       // Calculate the weighted average of these increments and make the step
